--- a/src/Composants/Vignettes/Vignettes.scss
+++ b/src/Composants/Vignettes/Vignettes.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     width: 340px;
     height: 340px;
-    font-family: $defaut;
+    font-family: $policeDefaut;
     color: white;
     background-color: $orange;
     border-radius: 10px;
