--- a/src/Pages/Accueil/App.scss
+++ b/src/Pages/Accueil/App.scss
@@ -1,7 +1,7 @@
 @import "../../Composants/Parametres.scss";
 
 #root {
-    font-family: $defaut;
+    font-family: $policeDefaut;
     display: flex;
     padding: 45px 100px 0 100px;
     flex-direction: column;
