--- a/src/Composants/Banniere/Banniere.scss
+++ b/src/Composants/Banniere/Banniere.scss
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
     width: $largeurMain + px;
     font-weight: 700;
     font-size: 48px;
@@ -18,7 +17,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        opacity: 0.45;
+        opacity: 1;
         position: absolute;
         z-index: 0;
         border-radius: 25px;
@@ -26,5 +25,13 @@
 
     .TexteBanniere {
         z-index: 2;
+    }
+
+    &.foncee {
+        background-color: black;
+
+        & > img {
+            opacity: 0.45;
+        }
     }
 }
