Site fonctionnel conforme à la maquette Figma

--- a/src/Pages/Logements/Logement.scss
+++ b/src/Pages/Logements/Logement.scss
@@ -13,6 +13,12 @@ main {
     }
 }
 
+.sectionStats {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .stats {
     display: flex;
     justify-content: flex-start;
