--- a/src/Composants/CommunsSite/Entete/Entete.scss
+++ b/src/Composants/CommunsSite/Entete/Entete.scss
@@ -18,4 +18,21 @@
     .pageActive {
         text-decoration: underline;
     }
+
+    @media (max-width: 769px) {
+        height: 46px;
+        padding: 20px 20px 0 20px;
+
+        & img {
+            height: 100%;
+        }
+
+        .menuNav {
+            gap: 26px;
+        }
+
+        .liensNav {
+            font-size: 12px;
+        }
+    }
 }
