--- a/src/Composants/Conteneur/Conteneur.scss
+++ b/src/Composants/Conteneur/Conteneur.scss
@@ -5,4 +5,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 50px;
+
+    @media (max-width: 769px) {
+        row-gap: 22px;
+    }
 }
