--- a/src/Composants/Hebergeur/Hebergeur.scss
+++ b/src/Composants/Hebergeur/Hebergeur.scss
@@ -14,9 +14,29 @@
         border-radius: 50px;
     }
 
-    & p {
+    & .nomHebergeur {
+        line-height: 25.67px;
         text-align: right;
         font-size: 18px;
         font-weight: 500;
+    }
+
+    @media (max-width: 769px) {
+        width: 135px;
+        column-gap: 10px;
+        height: 33px;
+
+        & img {
+            width: 32px;
+            height: 32px;
+            border-radius: 50px;
+        }
+
+        & .nomHebergeur {
+            line-height: 17.11px;
+            font-size: 12px;
+            width: 93px;
+            margin: 0 0 0 10px;
+        }
     }
 }
