--- a/src/Composants/MotsClefs/MotsClefs.scss
+++ b/src/Composants/MotsClefs/MotsClefs.scss
@@ -4,7 +4,9 @@
     color: white;
     width: 115px;
     height: 25px;
-    border: 1px black solid;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     & p {
         display: flex;
@@ -16,5 +18,14 @@
         border-radius: 10px;
         width: 100%;
         height: 100%;
+    }
+
+    @media (max-width: 769px) {
+        width: 84px;
+        height: 18px;
+
+        & p {
+            font-size: 10px;
+        }
     }
 }
