--- a/src/Pages/NonTrouve/404.scss
+++ b/src/Pages/NonTrouve/404.scss
@@ -12,16 +12,30 @@ h1 {
     font-size: 288px;
     font-weight: 700;
     margin: 140px 0 0 0;
+
+    @media (max-width: 769px) {
+        font-size: 96px;
+    }
 }
 
 p {
     font-size: 36px;
     font-weight: 500;
     margin: 0;
+
+    @media (max-width: 769px) {
+        width: 260px;
+        font-size: 18px;
+        text-align: center;
+    }
 }
 
 a, a:active, a:visited {
     color: black;
     font-size: 18px;
     font-weight: 500;
+
+    @media (max-width: 769px) {
+        font-size: 14px;
+    }
 }
